# JarvisAgent

./: .gitignore  CLAUDE.md  NOTES.md  README.md  pyproject.toml
apps/macos/JarvisBar/: Package.swift
apps/macos/JarvisBar/Sources/JarvisBar/: ChatModel.swift  ChatView.swift  JarvisBarApp.swift
apps/macos/JarvisBar/Sources/JarvisKit/: AgentEvent.swift  JarvisClient.swift  SSEParser.swift
apps/macos/JarvisBar/Tests/JarvisKitTests/: IntegrationTests.swift  SSEParserTests.swift
jarvis/: __init__.py
jarvis/core/: agent.py  config.py
jarvis/core/llm/: base.py  claude.py
jarvis/interfaces/: cli.py
jarvis/meetings/: __init__.py  recorder.py  service.py
jarvis/memory/: store.py  tools.py
jarvis/security/: audit.py  consent.py  executor.py  paths.py
jarvis/server/: __init__.py  app.py  consent.py  main.py  session.py
jarvis/tools/: applescript.py  base.py  calendar.py  email.py  files.py  github.py  shell.py
jarvis/tools/builtin/: time.py
jarvis/voice/: base.py  recorder.py  stt.py  tts.py
jarvis/workflows/: __init__.py  consent.py  model.py  notify.py  runner.py  schedule.py  scheduler.py  store.py
tests/: test_agent.py  test_files.py  test_github.py  test_meetings.py  test_memory.py  test_personal.py  test_security.py  test_server.py  test_shell.py  test_tools.py  test_voice.py  test_workflows.py
