[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis — a modular AI assistant for macOS"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.92",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
jarvis = "jarvis.interfaces.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
